--- a/PinStoreAPI/appsettings.json
+++ b/PinStoreAPI/appsettings.json
@@ -14,6 +14,13 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "retailerid": "9350740",
     "terminalid": "37835326"
   },
+  "ePAYTest": {
+    "url": "http://serv003.uk.epayworldwide.com:30030/up",
+    "username": "3R_PINBANK",
+    "password": "T3$t_001",
+    "retailerid": "9350740",
+    "terminalid": "37835326"
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "qualified.domain.name",
